@@ -442,11 +442,12 @@ void FUShmBuffer::scheduleRawCellForDiscard(unsigned int iCell) {
 		evt::State_t state = evtState(iCell);
 		stringstream details;
 		details
-			<< "state==evt::PROCESSING||state==evt::SENT||state==evt::EMPTY||state==evt::STOP||state==evt::LUMISECTION assertion failed! Actual state is "
+			<< "state==evt::PROCESSING||state==evt::SENT||state==evt::EMPTY||"
+			<<"state==evt::STOP||state==evt::LUMISECTION||state==evt::RECOWRITTEN assertion failed! Actual state is "
 			<< state << ", iCell = " << iCell;
 		XCEPT_ASSERT(  state == evt::PROCESSING || state == evt::SENT 
 				|| state == evt::EMPTY || state == evt::STOP
-				|| state == evt::LUMISECTION, evf::Exception, details.str());
+				|| state == evt::LUMISECTION || state == evt::RECOWRITTEN, evf::Exception, details.str());
 		if (state == evt::PROCESSING)
 			setEvtState(iCell, evt::PROCESSED);
 		if (state == evt::LUMISECTION)
@@ -631,7 +632,7 @@ void FUShmBuffer::scheduleRawEmptyCellForDiscard() {
 }
 
 //______________________________________________________________________________
-void FUShmBuffer::scheduleRawEmptyCellForDiscard(FUShmRawCell* cell) {
+bool FUShmBuffer::scheduleRawEmptyCellForDiscard(FUShmRawCell* cell, bool & pidstatus) {
 	waitRawDiscard();
 	if (rawCellReadyForDiscard(cell->index())) {
 		rawDiscardIndex_ = cell->index();
@@ -642,12 +643,15 @@ void FUShmBuffer::scheduleRawEmptyCellForDiscard(FUShmRawCell* cell) {
 		//    setEvtNumber(cell->index(),0xffffffff);
 		//    setEvtPrcId(cell->index(),0);
 		//    setEvtTimeStamp(cell->index(),0);
-		removeClientPrcId(getpid());
+		pidstatus = removeClientPrcId(getpid());
 		if (segmentationMode_)
 			shmdt(cell);
 		postRawDiscarded();
-	} else
+		return true;
+	} else {
 		postRawDiscard();
+		return false;
+	}
 }
 
 //______________________________________________________________________________
@@ -1528,14 +1532,15 @@ bool FUShmBuffer::removeClientPrcId(pid_t prcId) {
 	lock();
 	pid_t *prcid = (pid_t*) ((unsigned long) this + clientPrcIdOffset_);
 	unsigned int iClient(0);
-	while (iClient <= nClients_ && (*prcid) != prcId) {
+	while (iClient < nClients_ && (*prcid) != prcId) {
 		prcid++;
 		iClient++;
 	}
-	stringstream details;
-	details << "iClient!=nClients_ assertion failed! Actual iClient is "
-			<< iClient;
-	XCEPT_ASSERT(iClient != nClients_, evf::Exception, details.str());
+	if (iClient==nClients_) return false;
+	//stringstream details;
+	//details << "iClient!=nClients_ assertion failed! Actual iClient is "
+	//		<< iClient;
+	//XCEPT_ASSERT(iClient != nClients_, evf::Exception, details.str());
 	pid_t* next = prcid;
 	next++;
 	while (iClient < nClients_ - 1) {
