@@ -1,3 +1,10 @@
+2012-06-29 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-08-20
+	* allow discards for RECOWRITTEN raw cell
+	* removing pid not fatal if not present
+
+
 2012-05-31 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-08-19
